--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+  min-height: 100%;
+  font-size: 1em;
+
+  font: Roboto;
 }
