--- a/src/styles.css
+++ b/src/styles.css
@@ -1,53 +1,25 @@
 html, body {
   height: 100%;
   min-height: 100%;
-
-  margin: 0;
-  padding: 0;
 }
-
 
 .root {
   flex-grow: 1;
-  height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 
-.container {
-  height: 100%;
-  padding: 50px;
-  padding-bottom: 100px;
+.grid {
+  text-align: center;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-
-  margin: 0 auto;
-
-  height: 100%;
-  width: 100%;
-  min-width: 300px;
-  min-height: 500px;
+  padding: 30px;
 }
 
 .logo {
   height: 150px;
   width: 150px;
-}
-
-.logoContainer {
-  padding: 10px;
-  text-align: center;
-
-}
-
-.infoContainer {
-  padding: 10px;
-}
-
-.paintingContainer {
-  width: 100%;
-  text-align: center;
 }
 
 .painting {
@@ -58,7 +30,6 @@ html, body {
 }
 
 .social {
-  bottom: 0;
-  position: absolute;
   width: 100%;
+  bottom: 0;
 }
